code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_31.wast
(assert_invalid
  (module
    (table 0 funcref)
    (func $unbound-type (call_indirect (type 1) (i32.const 0)))
  )
  "unknown type"
)